<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/tutorial1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="38dp"
        android:text="@string/tutorial1"
    	android:textSize="28sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/tutorial2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tutorial1"
        android:layout_below="@+id/tutorial1"
        android:layout_marginTop="26dp"
        android:text="@string/tutorial2"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tutorial3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tutorial2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tutorial2"
        android:layout_marginTop="28dp"
        android:text="@string/tutorial3"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>